--- a/index.html
+++ b/index.html
@@ -3,49 +3,123 @@
 
 <head>
 
-  <!--Import Google Icon Font-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Compiled and minified Materialize CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-  <!-- Font awesome css -->
-  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <!-- Font awesome css -->
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
-  <!-- Style sheet -->
-  <link rel="stylesheet" href="./style.css">
+    <!-- Style sheet -->
+    <link rel="stylesheet" href="./style.css">
 
-  <!--Let browser know website is optimized for mobile-->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--Let browser know website is optimized for mobile-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>X1</title>
+    <title>Weather App</title>
 </head>
 
 <body>
     <!-- nav bar -->
     <div class="navbar-fixed">
         <nav>
-            <div class="nav-wrapper indigo accent-3">
-                <a href="#" class="brand-logo"><i class="fas fa-cloud-moon"></i>Wheather</a>
-              </div>
+            <div class="nav-wrapper indigo accent-4">
+                <a href="#" class="brand-logo"><i class="fas fa-cloud-moon align-left hide-on-med-and-down"></i>Weather Dashboard</a>
+
+                <!-- side nav trigger -->
+        <a href="#" class="sidenav-trigger" data-target="slide-out"><i class="fas fa-cloud-moon align-right"
+            id="spaceship"></i></a>
+            </div>
         </nav>
-      </div>
+    </div>
 
+    <div class="row">
+        <form class="col s12">
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">public</i>
+                    <input id="SearchBar" type="text" class="validate">
+                    <label for="SearchBar">Location</label>
+                    <span class="helper-text" data-error="Please Enter Valid Location" data-success=""></span>
+                </div>
+            </div>
+        </form>
+    </div>
 
+    <div class="row">
+        <div class="col s4">
+            <div class="card light-blue lighten-5">
+                <div class="card-content">
+                    <span class="card-title">History</span>
 
+                    <div class="row">
+                        <p>search 1</p>
+                    </div>
 
+                    <div class="row">
+                        <p>search 2</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col s8">
+                <div class="row">
+                    <div class="card-content">
+                        <span class="card-title" id="LocalDate">LD</span>
+                        <p id="temp">Temperature:</p>
+                        <p id="humidity">Humidity:</p>
+                        <p id="windSpd">Wind Speed:</p>
+                        <p id="UV">UV Index:</p>
+                    </div>
+                </div>
+        </div>
+        
+    </div>
+
+            <div class="row">
+                <div class="card col s10 offset-s1 medium">
+                    <div class="card-content">
+                        <h3>5-Day Forecast:</h3>
+                    </div>
+                    <div class="card-tabs">
+                      <ul class="tabs tabs-fixed-width">
+                        <li class="tab"><a class="active" href="#test4">Test 1</a></li>
+                        <li class="tab"><a href="#test5">Test 2</a></li>
+                        <li class="tab"><a href="#test6">Test 3</a></li>
+                        <li class="tab"><a href="#test7">Test 4</a></li>
+                        <li class="tab"><a href="#test8">Test 5</a></li>
+                      </ul>
+                    </div>
+                    <div class="card-content grey lighten-4">
+                      <div id="test4">Test 1</div>
+                      <div id="test5">Test 2</div>
+                      <div id="test6">Test 3</div>
+                      <div id="test7">Test 4</div>
+                      <div id="test8">Test 5</div>
+                    </div>
+                  </div>
+            </div>
+
+        <footer class="page-footer">
+            <div class="footer-copyright">
+                <div class="container">
+                    © 2014 Copyright Text
+                    <a class="grey-text text-lighten-4 right" href="https://venmo.com/Eamon-"><img src="https://media3.giphy.com/media/l17M5uvfc1VosGUUP0/giphy.gif?cid=ecf05e4717jfry0qbzgn3gnfdqitaa3msa7eony1d5ubk0ci&rid=giphy.gif" alt="secret" id="div"></a>
+                </div>
+            </div>
+        </footer>
 
 </body>
 
 <!-- Jquery Init -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-  integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-  crossorigin="anonymous"></script>
-
-<!-- Compiled and minified JavaScript from materialize -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+    crossorigin="anonymous"></script>
 
 <!-- main js init -->
 <script src="./js/main.js"></script>
@@ -53,7 +127,23 @@
 <!-- anime js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 
-<!-- animate js -->
+<!-- fetching api info  -->
+<script src="./js/fetch.js"></script>
+
+<!-- MY animate js -->
 <script src="./js/animate.js"></script>
+
+<!-- Compiled and minified JavaScript from materialize -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+<script>
+    var el = document.querySelector('.tabs');
+    var instance = M.Tabs.init(el, {});
+
+        //   Input init
+    $(document).ready(function() {
+    M.updateTextFields();
+    });
+</script>
 
 </html>
