api pull info completed. API is succesfully pulling all needed data and popilating properly"

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <p id="temp">Temperature:</p>
                         <p id="humidity">Humidity:</p>
                         <p id="windSpd">Wind Speed:</p>
-                        <p id="UV">UV Index:</p>
+                        <p>UV Index: <span id="UV"></span></p>
                     </div>
                 </div>
         </div>
@@ -88,19 +88,36 @@
                     </div>
                     <div class="card-tabs">
                       <ul class="tabs tabs-fixed-width">
-                        <li class="tab"><a class="active" href="#test4">Test 1</a></li>
-                        <li class="tab"><a href="#test5">Test 2</a></li>
-                        <li class="tab"><a href="#test6">Test 3</a></li>
-                        <li class="tab"><a href="#test7">Test 4</a></li>
-                        <li class="tab"><a href="#test8">Test 5</a></li>
+                        <li class="tab"><a class="active" href="#test4" id="date1">Date</a></li>
+                        <li class="tab"><a href="#test5" id="date2">Date</a></li>
+                        <li class="tab"><a href="#test6" id="date3">Date</a></li>
+                        <li class="tab"><a href="#test7" id="date4">Date</a></li>
+                        <li class="tab"><a href="#test8" id="date5">Date</a></li>
                       </ul>
                     </div>
                     <div class="card-content grey lighten-4">
-                      <div id="test4">Test 1</div>
-                      <div id="test5">Test 2</div>
-                      <div id="test6">Test 3</div>
-                      <div id="test7">Test 4</div>
-                      <div id="test8">Test 5</div>
+                      <div id="test4">Icon
+                          <p class="humidity1">Humidity</p>
+                          <p class="temp1">temp</p>
+
+                      </div>
+                      <div id="test5">
+                        Icon
+                        <p class="humidity2">Humidity</p>
+                        <p class="temp2">temp</p>
+                      </div>
+                      <div id="test6">Icon
+                        <p class="humidity3">Humidity</p>
+                        <p class="temp3">temp</p>
+                    </div>
+                      <div id="test7">Icon
+                        <p class="humidity4">Humidity</p>
+                        <p class="temp4">temp</p>
+                    </div>
+                      <div id="test8">Icon
+                        <p class="humidity5">Humidity8</p>
+                        <p class="temp5">temp</p>
+                    </div>
                     </div>
                   </div>
             </div>
@@ -108,7 +125,7 @@
         <footer class="page-footer">
             <div class="footer-copyright">
                 <div class="container">
-                    © 2014 Copyright Text
+                    © 2014 Copyright Eamon McHugh
                     <a class="grey-text text-lighten-4 right" href="https://venmo.com/Eamon-"><img src="https://media3.giphy.com/media/l17M5uvfc1VosGUUP0/giphy.gif?cid=ecf05e4717jfry0qbzgn3gnfdqitaa3msa7eony1d5ubk0ci&rid=giphy.gif" alt="secret" id="div"></a>
                 </div>
             </div>
