--- a/index.html
+++ b/index.html
@@ -37,37 +37,28 @@
         </nav>
     </div>
 
-    <div class="row">
-        <form class="col s12">
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">public</i>
+    <!-- Search Bar -->
+            <div class="row" id="searchRow">
+                <div class="input-field col s8 offset-s1">
                     <input id="SearchBar" type="text" class="validate">
                     <label for="SearchBar">Location</label>
-                    <span class="helper-text" data-error="Please Enter Valid Location" data-success=""></span>
                 </div>
+                    <a class="btn-floating btn-medium waves-effect waves-light" id="searchBtn"><i class="material-icons">public</i></a>
             </div>
-        </form>
-    </div>
 
+    <!-- History -->
     <div class="row">
-        <div class="col s4">
-            <div class="card light-blue lighten-5">
-                <div class="card-content">
-                    <span class="card-title">History</span>
-
-                    <div class="row">
-                        <p>search 1</p>
-                    </div>
-
-                    <div class="row">
-                        <p>search 2</p>
-                    </div>
-                </div>
+            <div class="col s10 offset-s1 card light-blue lighten-5" id="historyRow">
+              
+                    <div class="col s3 srch" id="history1">Search1</div>
+                    <div class="col s3 srch" id="histor21">Search2</div>
+                    <div class="col s3 srch" id="history3">search3</div>
+                    <div class="col s3 srch" id="history4">search4</div>
             </div>
         </div>
-
-        <div class="col s8">
+    <div class="row">
+        <!-- Main info -->
+        <div class="col col s10 offset-s1 card" id="mainCard">
                 <div class="row">
                     <div class="card-content">
                         <span class="card-title" id="LocalDate">LD</span>
@@ -78,11 +69,11 @@
                     </div>
                 </div>
         </div>
-        
+                           <!-- Forecast  -->
     </div>
 
             <div class="row">
-                <div class="card col s10 offset-s1 medium">
+                <div class="card col s10 offset-s1 medium" id="forecastCard">
                     <div class="card-content">
                         <h3>5-Day Forecast:</h3>
                     </div>
