finished history string

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="col s10 offset-s1 card light-blue lighten-5" id="historyRow">
               
                     <div class="col s3 srch" id="history1">Search1</div>
-                    <div class="col s3 srch" id="histor21">Search2</div>
+                    <div class="col s3 srch" id="history2">Search2</div>
                     <div class="col s3 srch" id="history3">search3</div>
                     <div class="col s3 srch" id="history4">search4</div>
             </div>
