weather launches to greenwich if history array null. background toggle classed based on weather descrition. icons added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <!-- Font awesome css -->
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
 
     <!-- Style sheet -->
     <link rel="stylesheet" href="./style.css">
@@ -87,25 +87,34 @@
                       </ul>
                     </div>
                     <div class="card-content grey lighten-4">
-                      <div id="test4">Icon
+                      <div id="test4">
+                        <img class="icon1"></img>
+                        <p class="wD1">w</p>
                           <p class="humidity1">Humidity</p>
                           <p class="temp1">temp</p>
 
                       </div>
                       <div id="test5">
-                        Icon
+                        <img class="icon2"></img>
+                        <p class="wD2">w</p>
                         <p class="humidity2">Humidity</p>
                         <p class="temp2">temp</p>
                       </div>
-                      <div id="test6">Icon
+                      <div id="test6">
+                        <img class="icon3"></img>
+                        <p class="wD3">w</p>
                         <p class="humidity3">Humidity</p>
                         <p class="temp3">temp</p>
                     </div>
-                      <div id="test7">Icon
+                      <div id="test7">
+                          <img class="icon4"></img>
+                          <p class="wD4">w</p>
                         <p class="humidity4">Humidity</p>
                         <p class="temp4">temp</p>
                     </div>
-                      <div id="test8">Icon
+                      <div id="test8">
+                        <img class="icon5"></img>
+                        <p class="wD5">w</p>
                         <p class="humidity5">Humidity8</p>
                         <p class="temp5">temp</p>
                     </div>
