--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     <div class="row">
             <div class="col s10 offset-s1 card light-blue lighten-5" id="historyRow">
               
-                    <div class="col s3 srch" id="history1">Search1</div>
-                    <div class="col s3 srch" id="history2">Search2</div>
-                    <div class="col s3 srch" id="history3">search3</div>
-                    <div class="col s3 srch" id="history4">search4</div>
+                    <div class="col s3 srch" id="history1">Chicago</div>
+                    <div class="col s3 srch" id="history2">London</div>
+                    <div class="col s3 srch" id="history3">Denver</div>
+                    <div class="col s3 srch" id="history4">Sydney</div>
             </div>
         </div>
     <div class="row">
